--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,9 +17,48 @@
                         <div class="container-fluid justify-content-center" id="relatorio">
 
                             <!-- Page Heading -->
-                            <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                                <h1 class="h3 mb-0">Seu Progresso</h1>
-                                <h1 class="h6 mb-0">Como essa é uma área focada nas disciplinas, já somamos as atividades complementares.</h1>
+                            <div class="d-sm-flex align-items-center justify-content-between mt-4 mb-4">
+                                <h1 class="h3 mb-0">
+                                    <%= json.dadosDiscente[1] %>
+                                </h1>
+
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-primary ml-4" data-toggle="modal" data-target="#Modal">
+                                    Info
+                                </button>
+
+                                <!-- Modal -->
+                                <div class="modal fade" style="color: black;" id="Modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" style="max-width: 720px" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Mais informações</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <h1 class="h4">Matrícula:
+                                                    <%= json.dadosDiscente[0] %>
+                                                </h1>
+                                                <h1 class="h4">Curso:
+                                                    <%= json.dadosCurso[0] %>
+                                                </h1>
+                                                <% for (let i = 0; i < json.dadosListaDisciplinas.length; i++) { %>
+                                                    <h6>
+                                                        <%= json.dadosListaDisciplinas[i][3] %> -
+                                                            <%= json.dadosListaDisciplinas[i][1] %> -
+                                                                <%= json.dadosListaDisciplinas[i][2] %> -
+                                                                    <%= json.dadosListaDisciplinas[i][0] %>
+                                                    </h6>
+                                                    <% } %>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
 
                             <!-- Content Row -->
