--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -11,7 +11,13 @@
 <script src="javascripts/graficos.js"></script>
 
 <!-- Page level plugins -->
-<script src="javascripts/Chart.min.js"></script>
+<!-- <script src="javascripts/Chart.min.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="javascripts/progressoManual.js"></script>
+<!--<script src="javascripts/graficos.js"></script>-->
+<script src="javascripts/area-chart.js"></script>
+<script src="javascripts/pie-chart.js"></script>
+
 
 </body>
 
