Adiciona pág ativ complementares

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,7 +16,7 @@
 
     <!-- Nav Item - Utilities Collapse Menu -->
     <li class="nav-item">
-        <a class="nav-link cor-font-menu" href="/complementar">
+        <a class="nav-link cor-font-menu" href="/atividadesComplementares">
             <img src="images/icon/icone-horas.svg" alt=""> Horas
         </a>
     </li>
