--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,12 +22,15 @@
                         </nav> -->
                         <!-- End of Topbar -->
 
-                        <h1 style="font-size: 48px;" class="ml-5 mb-4 text-amarelo">Esse sistema foi desenvolvido para você,</h1>
-                        <h4 class="ml-5">que assim como outros alunos, tem dificuldade em encontrar algumas<br>informações sobre o curso.</h4>
+                        <h1 style="font-size: 48px;" class="ml-5 mb-4 text-amarelo">Esse sistema foi desenvolvido para você,
+                        </h1>
+                        <h4 class="ml-5">que assim como outros alunos, tem dificuldade em encontrar algumas
+                            <br>informações sobre o curso.</h4>
                         <h4 class="ml-5">Aqui você pode: ver seu progresso, verificar as trilhas e entender<br>sobre as atividades/horas complementares.</h4><br>
                         <div class="ml-5">
                             <a class="botao" href="/escolhaProgresso" role="button">Progresso</a>
-                            <a class="botao ml-4" href="/complementar" role="button">Atividades Complementares</a>
+                            <a class="botao ml-4" href="/atividadesComplementares" role="button">Atividades
+                                Complementares</a>
                             <a class="botao ml-4" href="/trilhas" role="button">Trilhas</a>
                         </div>
                     </div>
