--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,12 @@
     <link rel="icon" href="images/icon/logo.svg">
 
     <!-- CSS -->
+    <link rel="stylesheet" href="stylesheets/d3-mitch-tree.css">
+    <link rel="stylesheet" href="stylesheets/d3-mitch-tree-theme.css">
     <link href="stylesheets/sb-admin-2.css" rel="stylesheet">
     <link href="stylesheets/style.css" rel="stylesheet">
+
+    <script src="javascripts/d3-mitch-tree.js"></script>
+    <script src="javascripts/tree.js"></script>
 
 </head>
