deu certo eeeeee

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -256,7 +256,7 @@
                                                     </div>
                                                     <div class=" flex align-items-center ">
                                                         <div class=" h3 mb-0 text-laranja mx-2 " id=" discRestantes ">
-                                                            <%= json.discEletQuarto %>
+                                                            <%= json4.discEletQuarto %>
                                                         </div>
                                                         <div class=" h6 mb-0 ">Disciplinas eletivas do 4° semestre restantes
                                                         </div>
@@ -275,7 +275,7 @@
                                                     </div>
                                                     <div class=" flex align-items-center ">
                                                         <div class=" h3 mb-0 text-laranja mx-2 " id=" discRestantes ">
-                                                            <%= json.discEletQuinto %>
+                                                            <%= json4.discEletQuinto %>
                                                         </div>
                                                         <div class=" h6 mb-0 ">Disciplinas eletivas do 5° semestre restantes
                                                         </div>
